--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -62,7 +62,7 @@
 
 //}
 .slider__item {
-
+  background-image:url('../images/slider-item.jpg');
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
